use ArrayList and ArrayBlockingQueue instead of LinkedList in Emitter